sixth and final commit fav icon update and list font color changed

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ input {
 
 .list {
   background-color: #ab886d; /* Medium brown for list background */
-  color: #d6c0b3; /* Warm neutral for list text */
+  color: #493628; /* Warm neutral for list text */
   padding: 4rem 0;
   display: flex;
   justify-content: space-between;
